# JEM

./: .gitignore  README.md  dataset.dvc  dvc.yaml  eval_clf.json  eval_wrn_ebm.py  eval_wrn_ebm_nb.ipynb  execute.sh  hash_params.py  params.yaml  plot.json  plot_histograms.ipynb  pyproject.toml  requirements.txt  scores.json  train.ipynb  train_wrn_ebm.py  train_wrn_ebm_nb.ipynb
.dvc/: config
dataset/: cifar-10-python.tar.gz.dvc
