[project]
name = ""
version = ""
description = ""
authors = [
    {name = "James Sweet", email = "james.sweet88@googlemail.com"},
]
dependencies = [
    "torchvision==0.8.1",
    "seaborn==0.11.0",
    "tqdm~=4.62",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
